stay in ram once loaded

--- a/example.env
+++ b/example.env
@@ -50,7 +50,7 @@ OLLAMA_MAX_LOADED_MODELS=1                 # Keep 1 model in memory
 OLLAMA_MAX_QUEUE=20                        # Queue depth for incoming requests
 
 # Model Loading and Retention
-OLLAMA_KEEP_ALIVE=30m                      # Keep models loaded for 30 minutes
+OLLAMA_KEEP_ALIVE=-1                      # Keep models loaded for 30 minutes
 OLLAMA_LOAD_TIMEOUT=600                    # 10 minutes timeout for large models
 OLLAMA_REQUEST_TIMEOUT=300                 # 5 minutes per request
 
