# Use internal dns

--- a/example.env
+++ b/example.env
@@ -22,8 +22,9 @@ DEFAULT_USER_NAME=Admin
 DEFAULT_USER_PASSWORD=change-this-password
 
 # ===== OPEN WEBUI CONFIGURATION =====
-WEBUI_URL=https://ai.junder.uk
-CORS_ALLOW_ORIGIN=https://ai.junder.uk
+# Use internal dns
+WEBUI_URL=http://open-webui:8080
+CORS_ALLOW_ORIGIN=http://open-webui:8080
 
 # User Agent and Warnings
 USER_AGENT=Open-WebUI/1.0 (ai.junder.uk)
@@ -40,7 +41,7 @@ OLLAMA_DATA_PATH=/mnt/nvme/ollama_data
 WEBUI_DATA_PATH=/mnt/nvme/webui_data
 
 # ===== OLLAMA CORE SETTINGS =====
-OLLAMA_HOST=0.0.0.0:11434
+OLLAMA_HOST=127.0.0.1:11434
 OLLAMA_NOHISTORY=false
 
 # ===== OLLAMA PERFORMANCE SETTINGS =====
