# ===== OLLAMA CORE SETTINGS ===== OLLAMA_HOST=http://localhost:11434

--- a/example.env
+++ b/example.env
@@ -41,7 +41,7 @@ OLLAMA_DATA_PATH=/mnt/nvme/ollama_data
 WEBUI_DATA_PATH=/mnt/nvme/webui_data
 
 # ===== OLLAMA CORE SETTINGS =====
-OLLAMA_HOST=open-webui:11434
+OLLAMA_HOST=http://localhost:11434
 OLLAMA_NOHISTORY=false
 
 # ===== OLLAMA PERFORMANCE SETTINGS =====
